correct spacings
SRFCMSAL-2751

--- a/source/_patterns/20-molecules/show-info/show-info.scss
+++ b/source/_patterns/20-molecules/show-info/show-info.scss
@@ -144,6 +144,7 @@ $coverImageSize: 112px;
   @include fontSize(16);
   line-height: $default-line-height-ratio;
   color: $color-srf-warmgrey-1100;
+  margin-top: 16px;
   margin-bottom: 24px;
   display: block;
 
@@ -190,7 +191,8 @@ $coverImageSize: 112px;
   flex-wrap: wrap;
 
   .pill-button {
-    margin: 16px 16px 0 0;
+    padding: 0 24px 0 16px;
+    margin-right: 16px;
 
     @include smartphone {
       width: 100%;
@@ -201,7 +203,8 @@ $coverImageSize: 112px;
   .button--neutral {
     width: auto;
     position: relative;
-    margin: 16px 16px 0 0;
+    margin-right: 16px;
+    margin-top: 0;
 
     &:last-child {
       margin-right: 0;
